# chemtabextract

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  LICENSE  README.md  REQUIREMENTS.md  TECHNICAL_SPEC.md  main.py  pyproject.toml  qa_dev_actions_improvements-backlog-sweep.md  qa_dev_actions_p0p1-test-gaps.md  qa_dev_actions_post-verify-cleanups.md  whitelist.py
.claude/commands/: CHEM_DEVELOPER.md  QA-ENGINEER.md  architect_2_0.md  requirements_analyst_2_0.md
docs/: acknowledgement.rst  conf.py  installation.rst  license.rst
docs/source_code/: algorithms.rst  cell_parser.rst  exceptions.rst  footnotes.rst  history.rst  input.rst  output.rst  source_code.rst  table_object.rst
examples/: basic_functionality.ipynb  features.ipynb
examples/tables/: table_example.csv  te_04.csv  te_06.csv
openspec/changes/archive/2026-03-17-chemtabextract-modernisation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-17-chemtabextract-modernisation/specs/package-structure/: spec.md
openspec/changes/archive/2026-03-17-improvements-backlog/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-17-improvements-backlog-sweep/: design.md  proposal.md
openspec/changes/archive/2026-03-17-improvements-backlog-sweep/specs/algorithms-subpackage/: spec.md
openspec/changes/archive/2026-03-17-improvements-backlog-sweep/specs/logging-and-exceptions/: spec.md
openspec/changes/archive/2026-03-17-improvements-backlog-sweep/specs/package-structure/: spec.md
openspec/changes/chemtabextract-modernisation/: tasks.md
openspec/changes/chemtabextract-modernisation/specs/algorithms-subpackage/: spec.md
openspec/changes/chemtabextract-modernisation/specs/dependency-management/: spec.md
openspec/changes/chemtabextract-modernisation/specs/logging-and-exceptions/: spec.md
openspec/changes/chemtabextract-modernisation/specs/precommit-stack/: spec.md
openspec/changes/chemtabextract-modernisation/specs/pytest-suite/: spec.md
openspec/changes/improvements-backlog-sweep/: tasks.md
openspec/specs/history-update-api/: spec.md
openspec/specs/logging-and-exceptions/: spec.md
openspec/specs/precommit-stack/: spec.md
src/chemtabextract/: __init__.py  exceptions.py
src/chemtabextract/input/: __init__.py  from_any.py  from_csv.py  from_html.py  from_list.py
src/chemtabextract/output/: __init__.py  print.py  to_csv.py  to_pandas.py
src/chemtabextract/table/: __init__.py  algorithms.py  footnotes.py  history.py  parse.py  table.py
src/chemtabextract/table/algorithms/: __init__.py  _categorize.py  _mips.py  _structure.py  _utils.py
tests/: __init__.py  conftest.py  test_conftest_fixtures.py  test_from_any.py  test_input_from_csv.py  test_input_from_html.py  test_input_from_list.py  test_output_from_csv.py  test_output_to_pandas.py  test_public_interface.py  test_row_categories.py  test_table_errors.py  test_table_footnotes.py  test_table_history.py  test_table_parse.py  test_table_table.py  test_table_table_header_extens_d.py  test_table_table_header_extension.py  test_table_table_spanning_cells.py  test_table_table_subtables.py  test_table_transpose.py  test_tde.py  test_trivial_table.py  test_url_validation.py
tests/data/: row_categories_table.csv  table_1col.csv  table_empty_lines.csv  table_example1.csv  table_example10b.csv  table_example2.csv  table_example3.csv  table_example6.csv  table_example7.csv  table_example8b.csv  table_example_footnotes.csv  te_01.csv  te_02.csv  te_03.csv  te_04.csv  te_05.csv  te_08.csv
(+1 files in other folders)
