[project]
name = "tabledataextractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "django>2.1.6",
  "ipykernel>=7.2.0",
  "jinja2>=3.1.6",
  "m2r>=0.2.1",
  "nbsphinx>=0.7.1",
  "nbsphinx-link>=1.3.0",
  "numpy>=1.16,<2.0.0",
  "pandas>=0.23.4",
  "prettytable>=0.7.2",
  "requests>=2.21.0",
  "selenium>=3.141.0",
  "sphinx>=1.8.1",
  "sympy>=1.14.0",
]
