[project]
name = "chemtabextract"
version = "0.9.0"
description = "Extracts and standardises structured data from scientific tables using the MIPS algorithm."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "numpy>=1.16,<2.0.0",
  "pandas>=0.25",
  "prettytable>=0.7.2",
  "requests>=2.21.0",
]

[project.optional-dependencies]
web = [
  "selenium>=3.141.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chemtabextract"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "pre-commit>=4.0.0",
  "ruff>=0.9.0",
  "mypy>=1.14.0",
  "types-requests>=2.31.0",
  "bandit>=1.8.0",
  "vulture>=2.14.0",
  "xenon>=0.9.3",
  "commitizen>=4.4.0",
  "lxml>=6.0.2",
]
docs = [
  "sphinx>=1.8.1",
  "m2r>=0.2.1",
  "nbsphinx>=0.7.1",
  "nbsphinx-link>=1.3.0",
  "jinja2>=3.1.6",
  "ipykernel>=7.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["chemtabextract"]
branch = true

[tool.coverage.report]
fail_under = 75
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["examples/", "docs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
  "E501",  # line-too-long: many existing long lines in data-heavy test files
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = false
exclude = ["^docs/", "^examples/"]

[[tool.mypy.overrides]]
module = ["chemtabextract.table.algorithms._mips"]
# MIPS algorithm is frozen legacy code; type errors are not fixed to
# avoid inadvertent semantic changes to the algorithm.
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # B101: assert used in tests (excluded) and library internals

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.9.0"
version_files = ["pyproject.toml:version"]
version_provider = "pep621"
tag_format = "v$version"
